--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
     <head>
         <title>L. Robert Gonzalez</title>
         <meta charest="UTF-8">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet"  type="text/css" href="assets/css/style2.css">
     </head>
     <body>
@@ -10,13 +11,15 @@
         <header>
             <h1>L. Robert Gonzalez</h1>
         </header>
-                <div class="links">
+            <div class="links">
                 <ul>
+                <nav class="navbar navbar-light bg-light">
                     <li><a href="index.html">About|</a></li>
                     <li><a href="portfolio.html">Portfolio|</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                </nav>
                 </ul>
-                </div>
+            </div>
         </div>
         <hr>
         <section class="bio">
